--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cropperjs": "^1.6.2",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-cropper": "^2.3.3",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
     "react-hook-form": "^7.54.2",
@@ -25,8 +30,11 @@
     "react-image-crop": "^11.0.7",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.15.10",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
